--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,8 @@ navigationCompose = "2.7.7"
 lifecyleViewmodel = "2.8.4"
 ktor = "2.3.12"
 datastore = "1.1.1"
+kotlinx-collections-immutable = "0.3.7"
+material3 = "1.0.0-alpha01"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -50,6 +52,10 @@ ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negoti
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
+kotlinx-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinx-collections-immutable" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3-common",version.ref="material3" }
+androidx-compose-material3-android = { group = "androidx.compose.material3", name = "material3-common-android",version.ref="material3" }
+androidx-compose-material3-desk = { group = "androidx.compose.material3", name = "material3-common-desktop",version.ref="material3" }
 
 datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
 datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
