Added market details API with chart API calls

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,4 @@ android.useAndroidX=true
 kotlin.mpp.enableCInteropCommonization=true
 
 kotlin.native.disableCompilerDaemon = true
+android.suppressUnsupportedCompileSdk=35
