--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 agp = "8.2.2"
-android-compileSdk = "34"
+android-compileSdk = "35"
 android-minSdk = "24"
-android-targetSdk = "34"
-androidx-activityCompose = "1.9.1"
+android-targetSdk = "35"
+androidx-activityCompose = "1.10.1"
 androidx-appcompat = "1.7.0"
 androidx-constraintlayout = "2.1.4"
-androidx-core-ktx = "1.13.1"
+androidx-core-ktx = "1.16.0"
 androidx-espresso-core = "3.6.1"
 androidx-lifecycle = "2.8.0"
 androidx-material = "1.12.0"
@@ -17,13 +17,13 @@ kotlin = "2.0.0"
 kotlinx-coroutines = "1.8.1"
 koin-bom = "4.0.0-RC1"
 navigationCompose = "2.7.7"
-lifecyleViewmodel = "2.8.4"
+lifecyleViewmodel = "2.8.7"
 ktor = "2.3.12"
-datastore = "1.1.1"
+datastore = "1.1.4"
 kotlinx-collections-immutable = "0.3.7"
 material3 = "1.0.0-alpha01"
 coil = "3.0.0-alpha06"
-room = "2.7.0-alpha10"
+room = "2.7.0"
 ksp = "2.0.20-Beta1-1.0.22"
 kotlinx-datetime="0.6.1"
 kotlin-serialization="1.8.0"
