fixed and made IOS runnable and fixed everything

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ kotlin.mpp.enableCInteropCommonization=true
 
 kotlin.native.disableCompilerDaemon = true
 android.suppressUnsupportedCompileSdk=35
+
+kotlin.native.cacheKind=none
