--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,30 +1,30 @@
 [versions]
-agp = "8.2.2"
+agp = "8.6.1"
 android-compileSdk = "35"
 android-minSdk = "24"
 android-targetSdk = "35"
 androidx-activityCompose = "1.10.1"
 androidx-appcompat = "1.7.0"
-androidx-constraintlayout = "2.1.4"
+androidx-constraintlayout = "2.2.1"
 androidx-core-ktx = "1.16.0"
 androidx-espresso-core = "3.6.1"
-androidx-lifecycle = "2.8.0"
+androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
-compose-plugin = "1.7.0-rc01"
+compose-plugin = "1.8.0"
 junit = "4.13.2"
-kotlin = "2.0.0"
+kotlin = "2.1.20"
 kotlinx-coroutines = "1.8.1"
-koin-bom = "4.0.0-RC1"
-navigationCompose = "2.7.7"
-lifecyleViewmodel = "2.8.7"
+koin-bom = "4.0.3"
+navigationCompose = "2.9.0-beta01"
+lifecyleViewmodel = "2.9.0"
 ktor = "2.3.12"
-datastore = "1.1.4"
+datastore = "1.1.6"
 kotlinx-collections-immutable = "0.3.7"
 material3 = "1.0.0-alpha01"
 coil = "3.0.0-alpha06"
-room = "2.7.0"
-ksp = "2.0.20-Beta1-1.0.22"
+room = "2.7.1"
+ksp = "2.1.20-1.0.31"
 kotlinx-datetime="0.6.1"
 kotlin-serialization="1.8.0"
 
@@ -72,6 +72,7 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 room-runtime-android = { group = "androidx.room", name = "room-runtime-android", version.ref = "room" }
+sqlite-bundled = {group = "androidx.sqlite", name = "sqlite-bundled", version.ref = "room" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 kotlin-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization" }
 
